@@ -1,11 +1,11 @@
 ﻿l_english:
  MD_RULES: "Millennium Dawn Rules"
 
- RULE_REMOVE_MICRO_STATES: "Remove Micro States"
- RULE_YES_RULE_REMOVE_MICRO_STATES_DESC: "Removing microstates should help performance for lower end machines.\nThe Majority of Carribean nations are annexed either into the UK, Bahamas to the USA, Trinidad to Venezeula, and all of the micro states in Europe to their closest benefactor."
+ RULE_REMOVE_MICRO_STATES: "Remove Microstates"
+ RULE_YES_RULE_REMOVE_MICRO_STATES_DESC: "Removing microstates should help performance for lower end machines.\nThe majority of Caribbean nations are annexed either into the UK, Bahamas to the USA, Trinidad to Venezeula, and all other microstates in Europe to their closest benefactor."
  RULE_NO_RULE_REMOVE_MICRO_STATES_DESC: "Removing microstates should help performance for lower end machines.\n"
 
- FSTK_ALLOWED: "Nuclear First Strike allowed"
+ FSTK_ALLOWED: "Nuclear First Strike Allowed"
  RULE_YES_FSTK_ALLOWED_DESC: "Player can choose the nuclear doctrine §Y$nuclear_doctrine_6_loc_key$§!"
  RULE_NO_FSTK_ALLOWED_DESC: "Player can not choose the nuclear doctrine §Y$nuclear_doctrine_6_loc_key$§!"
 
@@ -14,57 +14,58 @@
  RULE_NO_AI_FIRST_USE_DESC: "The AI can not choose a nuclear doctrine that allows first use of §YNuclear Weapons§!."
 
  RULE_DISABLE_NATO: "Disable NATO"
- RULE_YES_DISABLE_NATO_DESC: "NATO will be disabled upon loading into the game"
- RULE_NO_DISABLE_NATO_DESC: "NATO will remain a faction"
+ RULE_YES_DISABLE_NATO_DESC: "NATO will be disabled upon loading into the game."
+ RULE_NO_DISABLE_NATO_DESC: "NATO will remain a faction."
 
  RULE_DISABLE_EU: "Disable The EU"
- RULE_YES_DISABLE_EU_DESC: "All countries will be removed from the European Union"
- RULE_NO_DISABLE_EU_DESC: "The European Union will exist as is"
+ RULE_YES_DISABLE_EU_DESC: "All countries will be removed from the European Union."
+ RULE_NO_DISABLE_EU_DESC: "The European Union will exist as is."
 
  RULE_DISABLE_ANTI_BULLY: "Disable Public War Weariness"
- RULE_YES_ANTI_BULLY_DESC: "Disables the Public War Weariness system allowing you to be a warmongerer with no penalties"
- RULE_NO_ANTI_BULLY_DESC: "The Public War Weariness system will be enabled"
+ RULE_YES_ANTI_BULLY_DESC: "Disables the Public War Weariness system allowing you to be a warmongerer with no penalties."
+ RULE_NO_ANTI_BULLY_DESC: "The Public War Weariness system will be enabled."
 
  RULE_SALAFIST_BRANCH: "Enable Salafist Branch"
- RULE_YES_SALAFIST_BRANCH_DESC: "Enables the Salafist branch in the generic tree all nations"
- RULE_NO_SALAFIST_BRANCH_DESC: "The Salafist branch in the generic tree for sunni nations"
+ RULE_YES_SALAFIST_BRANCH_DESC: "Enables the Salafist branch in the generic tree for all nations regardless of starting religion."
+ RULE_NO_SALAFIST_BRANCH_DESC: "Enables the Salafist branch in the generic tree for nations following any variation of Islam."
 
  RULE_SPREAD_INFLUENCE_AMOUNT_GAIN: "Spread Influence Amount Gain"
- RULE_SPREAD_INFLUENCE_AMOUNT_GAIN_DESC: "Change the influence gain from spreading influence."
+ RULE_SPREAD_INFLUENCE_AMOUNT_GAIN_DESC: "Change the influence gained from spreading influence."
  RULE_SPREAD_INFLUENCE_DEFAULT_GAIN_3: "3%"
- RULE_SPREAD_INFLUENCE_DEFAULT_GAIN_3_DESC: "The standard influence gain per spread influence."
+ RULE_SPREAD_INFLUENCE_DEFAULT_GAIN_3_DESC: "The standard influence gained per spread influence action."
  RULE_SPREAD_INFLUENCE_GAIN_0_5: "0.5%"
- RULE_SPREAD_INFLUENCE_GAIN_0_5_DESC: "0.5% gain instead of Spread. If you really want to slow down influence."
+ RULE_SPREAD_INFLUENCE_GAIN_0_5_DESC: "0.5% influence gained per spread action. For if you really want to slow down influence gain."
  RULE_SPREAD_INFLUENCE_GAIN_2: "2%"
- RULE_SPREAD_INFLUENCE_GAIN_2_DESC: "2% gain instead of Spread. If you want to slow down gain."
+ RULE_SPREAD_INFLUENCE_GAIN_2_DESC: "2% influence gained per spread action. For if you want to slow down influence gain."
  RULE_SPREAD_INFLUENCE_GAIN_4: "4%"
- RULE_SPREAD_INFLUENCE_GAIN_4_DESC: "4% gain instead of Spread. If you really want to speed down influence."
+ RULE_SPREAD_INFLUENCE_GAIN_4_DESC: "4% influence gained per spread action. For if you really want to ramp up influence gain."
 
  RULE_SPREAD_INFLUENCE_AMOUNT_COOLDOWN: "Spread Influence Cooldown"
  RULE_SPREAD_INFLUENCE_30_COOLDOWN: "30 Days"
- RULE_SPREAD_INFLUENCE_30_COOLDOWN_DESC: "Every 30 days you can spread influence."
+ RULE_SPREAD_INFLUENCE_30_COOLDOWN_DESC: "The default cooldown. Once every 30 days, you can spread your influence to another nation."
  RULE_SPREAD_INFLUENCE_14_COOLDOWN: "14 Days"
- RULE_SPREAD_INFLUENCE_14_COOLDOWN_DESC: "Every 14 days you can spread influence."
+ RULE_SPREAD_INFLUENCE_14_COOLDOWN_DESC: "Once every 14 days, you can spread your influence to another nation."
  RULE_SPREAD_INFLUENCE_0_COOLDOWN: "No Cooldown"
- RULE_SPREAD_INFLUENCE_0_COOLDOWN_DESC: "No cooldown"
+ RULE_SPREAD_INFLUENCE_0_COOLDOWN_DESC: "No cooldown for spreading influence, for when you want to dump all your §HPolitical Power§! into influencing other nations!"
  RULE_SPREAD_INFLUENCE_60_COOLDOWN: "60 Days"
- RULE_SPREAD_INFLUENCE_60_COOLDOWN_DESC: "Every 60 days you can spread influence."
+ RULE_SPREAD_INFLUENCE_60_COOLDOWN_DESC: "Once every 60 days, you can spread your influence to another nation."
 
  RULE_INVEST_INFLUENCE_AMOUNT_GAIN: "Investment Influence Gain"
  RULE_INVEST_DEFAULT_GAIN_1: "1%"
- RULE_INVEST_DEFAULT_GAIN_1_DESC: "1% gain wehnever someone accepts your investments."
+ RULE_INVEST_DEFAULT_GAIN_1_DESC: "The default option. 1% influence gained whenever someone accepts your investments."
  RULE_INVEST_DEFAULT_GAIN_0_5: "0.5%"
- RULE_INVEST_DEFAULT_GAIN_0_5_DESC: "0.5% gain wehnever someone accepts your investments."
+ RULE_INVEST_DEFAULT_GAIN_0_5_DESC: "0.5% influence gained whenever someone accepts your investments."
  RULE_INVEST_DEFAULT_GAIN_2: "2%"
- RULE_INVEST_DEFAULT_GAIN_2_DESC: "2% gain wehnever someone accepts your investments."
+ RULE_INVEST_DEFAULT_GAIN_2_DESC: "2% influence gained whenever someone accepts your investments."
 
  RULE_INFLUENCE_COOLDOWN: "Investment Influence Gain Cooldown"
  RULE_14_DAY_INFLUENCE: "14 Day Cooldown"
- RULE_14_DAY_INFLUENCE_DESC: "The default cooldown for investment influence actions is 14 days or two weeks. This applies to the nation for all possible investment opportunities."
+ RULE_14_DAY_INFLUENCE_DESC: "The default option. The cooldown for influence gained from investing is 14 days or 2 weeks. This applies to the nation for all possible investment opportunities. Though you can still invest, you will not gain any influence in this timeframe."
  RULE_0_DAY_INFLUENCE: "No Cooldown"
- RULE_0_DAY_INFLUENCE_DESC: "Old MD influence action format. You can spam invest here so it is not great for balance purposes"
+ RULE_0_DAY_INFLUENCE_DESC: "Old school MD influence gained from investment time limit. You can invest as often as you like whilst still gaining influence, not recommended for those who enjoy balance!"
  RULE_30_DAY_INFLUENCE: "30 Day Cooldown"
- RULE_30_DAY_INFLUENCE_DESC: "If you are playing a multiplayer game and really want to fuck with everybdoy."
+ RULE_30_DAY_INFLUENCE_DESC: "The suggested multiplayer option. The cooldown for influence gained from investing is 30 days or roughly 1 month. This applies to the nation for all possible investment opportunities. Though you can still invest, you will not gain any influence in this timeframe."
+
  RULE_MD_CHAOS_MODE: "Enable MD Chaos Mode Beta v0.1"
  RULE_YES_MD_CHAOS_MODE_DESC: "Enables MD Chaos mode"
  RULE_NO_MD_CHAOS_MODE_DESC: "Disabled MD Chaos mode"
@@ -88,7 +89,7 @@
  RULE_NO_ALLOW_INTERVENTION_FORCES: "§YDefault§!. Does not allow you to recall intervention forces from foreign conflicts."
 
  RULE_OPTION_MD_DEFAULT: "Default AI Behaviour"
- RULE_OPTION_MD_DEFAULT_AI_DESC: "The AI will choose focuses randomly with a slight emphasis on historical choices. World state and country status will slightly affect choices"
+ RULE_OPTION_MD_DEFAULT_AI_DESC: "The AI will choose focuses randomly with a slight emphasis on historical choices. World state and country status will slightly affect choices."
  AI_CHAOS: "Chaotic AI Behaviour"
  AI_CHAOS_DESC: "The AI will always choose a completely random focus out of all of its currently available focuses. All focuses are equal, maximum confusion guaranteed."
  RULE_OPTION_RANDOM: "Random AI Behaviour"
@@ -127,9 +128,9 @@
  RULE_OPTION_FRA_HISTORICAL: "Historical AI Behaviour"
  RULE_OPTION_FRA_HISTORICAL_DESC: "France will remain Western and one of the leaders of the EU. France will try to bring the European Union towards greater centralisation, while also keeping their influence in their old colonies."
  RULE_OPTION_FRA_EGALITE: "Égalité"
- RULE_OPTION_FRA_EGALITE_DESC: "France will choose Égalité and drift towards marxism"
+ RULE_OPTION_FRA_EGALITE_DESC: "France will choose Égalité and drift towards marxism."
  RULE_OPTION_FRA_FRATERNITE: "Fraternité"
- RULE_OPTION_FRA_FRATERNITE_DESC: "France will choose Fraternité and aim to dominate Europe"
+ RULE_OPTION_FRA_FRATERNITE_DESC: "France will choose Fraternité and aim to dominate Europe."
 
  #Italy
  ITA_AI_BEHAVIOR_MD: "@ITA Italian Republic"
@@ -185,15 +186,15 @@
  #Syria
  SYR_AI_BEHAVIOR: "@SYR Syrian Arab Republic"
  RULE_OPTION_SYR_HISTORICAL: "Historical AI"
- RULE_OPTION_SYR_HISTORICAL_DESC: "Hafez al-Assad will be succeeded by his oldest son Bashar al-Assad. Bashar will keep Syria as a country aligned to Russia with a balanced focus of diplomacy, military and economy"
+ RULE_OPTION_SYR_HISTORICAL_DESC: "Hafez al-Assad will be succeeded by his oldest son Bashar al-Assad. Bashar will keep Syria as a country aligned to Russia with a balanced focus of diplomacy, military and economy."
  RULE_OPTION_SYR_IRON_LADY: "Iron Lady of Syria"
- RULE_OPTION_SYR_IRON_LADY_DESC: "Hafez al-Assad will be succeeded by his daughter Bushra al-Assad. Bushra will take a more neutral approach between the great powers with a focus on diplomacy and economy"
+ RULE_OPTION_SYR_IRON_LADY_DESC: "Hafez al-Assad will be succeeded by his daughter Bushra al-Assad. Bushra will take a more neutral approach between the great powers with a focus on diplomacy and economy."
  RULE_OPTION_SYR_SYRIAN_SAVAGE: "Syrian Savage"
- RULE_OPTION_SYR_SYRIAN_SAVAGE_DESC: "Hafez al-Assad will be succeeded by youngest son Maher al-Assad. Maher will try to form Greater Syria and carve a new power in the Middle East. He will focus on military and economic expansion"
+ RULE_OPTION_SYR_SYRIAN_SAVAGE_DESC: "Hafez al-Assad will be succeeded by youngest son Maher al-Assad. Maher will try to form Greater Syria and carve a new power in the Middle East. He will focus on military and economic expansion."
  RULE_OPTION_SYR_NEW_ASSAD: "New al-Assad"
- RULE_OPTION_SYR_NEW_ASSAD_DESC: "Hafez al-Assad will be succeeded by his brother Rifaat al-Assad after the Damascus Spring. Rifaat will focus on a pro-Saudi policy with focus on diplomacy and economy"
+ RULE_OPTION_SYR_NEW_ASSAD_DESC: "Hafez al-Assad will be succeeded by his brother Rifaat al-Assad after the Damascus Spring. Rifaat will focus on a pro-Saudi policy with focus on diplomacy and economy."
  RULE_OPTION_SYR_DAMASCUS_SPRING: "Damascus Spring"
- RULE_OPTION_SYR_DAMASCUS_SPRING_DESC: "Syria will be overtaken by the Damascus Spring movement and turned into a democracy"
+ RULE_OPTION_SYR_DAMASCUS_SPRING_DESC: "Syria will be overtaken by the Damascus Spring movement and turned into a democracy."
 
  #Bahrain
  BHR_AI_BEHAVIOR: "@BHR Bahrain"
@@ -225,34 +226,34 @@
  #Greece
  GRE_AI_BEHAVIOR: "@GRE Greece"
  RULE_HELLENIC_REPUBLIC: "Historical"
- RULE_HELLENIC_REPUBLIC_DESC: "Greece will mantain Democracy and will attempt to solve the Greek debt crisis by means of austerity measures"
+ RULE_HELLENIC_REPUBLIC_DESC: "Greece will mantain Democracy and will attempt to solve the Greek debt crisis by means of austerity measures."
  RULE_OPTION_KKE: "KKE"
- RULE_OPTION_KKE_DESC: "After discontent at the government grows due to the problems caused by the debt crisis the people will strengthen the Communist Party Of Greece and will attempt to create a Communist state"
+ RULE_OPTION_KKE_DESC: "After discontent at the government grows due to the problems caused by the debt crisis the people will strengthen the Communist Party Of Greece and will attempt to create a Communist state."
  RULE_OPTION_GOLDEN_DAWN: "Golden Dawn"
- RULE_OPTION_GOLDEN_DAWN_DESC: "After discontent at the government grows due to the problems caused by the debt crisis the people will strengthen the Nationalist Golden Dawn party and will attempt to create a powerful Greek state"
+ RULE_OPTION_GOLDEN_DAWN_DESC: "After discontent at the government grows due to the problems caused by the debt crisis the people will strengthen the Nationalist Golden Dawn party and will attempt to create a powerful Greek state."
 
  #Canada
  CAN_AI_BEHAVIOR: "@CAN Canada"
  RULE_NORTH_AMERICAN_STATUS_QUO: "North American Status Quo"
  RULE_NORTH_AMERICAN_STATUS_QUO_DESC: "Northern American Status Quo will see that Canada remains in NATO and stays relatively in place with NATO and the USA."
  RULE_NATIONALIST_CANADA: "Nationalist Canada"
- RULE_NATIONALIST_CANADA_DESC: "Canada will go nationalist and seek to dominate North America"
+ RULE_NATIONALIST_CANADA_DESC: "Canada will go nationalist and seek to dominate North America."
  RULE_STAND_ALONE_CANADA: "Stand Alone"
- RULE_STAND_ALONE_CANADA_DESC: "Armed neutrality is neutrality"
+ RULE_STAND_ALONE_CANADA_DESC: "Armed neutrality is neutrality."
 
  #Botswana
  BOT_AI_BEHAVIOR: "@BOT Botswana"
  RULE_BOT_BDP_RULES: "BDP Stronghold - Historical"
- RULE_BOT_BDP_RULES_DESC: "The BDP will continue holding onto to Botswana, staying non-aligned and true to conservative values"
+ RULE_BOT_BDP_RULES_DESC: "The BDP will continue holding onto to Botswana, staying non-aligned and true to conservative values."
  RULE_BOT_POLITICAL_RAINBOW: "Political Rainbow"
- RULE_BOT_POLITICAL_RAINBOW_DESC: "Opposition forces in Botswana will try to break the BDP hold on Botswana and create a more multiparty democracy"
+ RULE_BOT_POLITICAL_RAINBOW_DESC: "Opposition forces in Botswana will try to break the BDP hold on Botswana and create a more multiparty democracy."
  RULE_BOT_KGOSIKGOLO: "The Kgosikgolo"
- RULE_BOT_KGOSIKGOLO_DESC: "The traditional tribal chiefs of Botswana will be strengthened and one of them will be crowned the Kgosikgolo of Botswana"
+ RULE_BOT_KGOSIKGOLO_DESC: "The traditional tribal chiefs of Botswana will be strengthened and one of them will be crowned the Kgosikgolo of Botswana."
 
  #Multiple Formables
  RULE_ALLOW_MULTIPLE_FORMABLES: "Allow multiple of the same formable"
  RULE_ALLOW_MULTIPLE_FORMABLES_BLOCKED_DESC: "Only allow a specific formable to be formed by one nation."
- RULE_ALLOW_MULTIPLE_FORMABLES_ALLOWED_DESC: "Allow the same formable to be formed by any nation that meet the conditions (can have rival Arab Unions). Flags are set up so it is likely they will be unique, however not guarenteed."
+ RULE_ALLOW_MULTIPLE_FORMABLES_ALLOWED_DESC: "Allows for the same formable to be formed by any nation that meets the necessary criteria (this may result in rival Arab Unions for example). Flags for these formable nations are set up so it is likely they will be unique, however this is not guaranteed."
 
  #Edgy Flags
  RULE_ALLOW_EDGY_FLAGS: "Allow Edgy Flags"
@@ -261,15 +262,15 @@
  #Random Ideologies
  MD_RANDOM_RULES: "Randomizer Rules"
  RULE_RANDOM_IDEOLOGIES: "Randomize Outlooks"
- RULE_RANDOM_IDEOLOGIES_NO_DESC: "All nations keep their historical Outlook"
- RULE_RANDOM_IDEOLOGIES_YES_DESC: "All nations now have a random Outlook"
+ RULE_RANDOM_IDEOLOGIES_NO_DESC: "All nations maintain their historical outlook."
+ RULE_RANDOM_IDEOLOGIES_YES_DESC: "All nations now have a randomised outlook."
 
  #Random Religions
  RULE_RANDOM_RELIGION: "Randomize Religions"
- RULE_RANDOM_RELIGION_NO_DESC: "All nations keep their historical Religions"
- RULE_RANDOM_RELIGION_YES_DESC: "ALl nations have their religions randomized"
+ RULE_RANDOM_RELIGION_NO_DESC: "All nations maintain their historical religions."
+ RULE_RANDOM_RELIGION_YES_DESC: "ALl nations have their religions randomized."
 
  #Internal Factions
  RULE_RANDOM_INTERNAL_FACTIONS: "Randomize Internal Factions"
- RULE_RANDOM_INTERNAL_FACTIONS_NO_DESC: "ALl nations keep their historical Internal Factions"
- RULE_RANDOM_INTERNAL_FACTIONS_YES_DESC: "ALl nations have randomized Internal Factions"
+ RULE_RANDOM_INTERNAL_FACTIONS_NO_DESC: "All nations maintain their historical internal factions."
+ RULE_RANDOM_INTERNAL_FACTIONS_YES_DESC: "All nations have randomized internal factions."
