@@ -12,6 +12,7 @@ Bugfixes:
 	- Fixed issue w/ Operative Portraits coming up as blanks
 	- Fixed Natural Orator spy trait giving useless effects
 	- Semi-Consumption Economy can no longer be taken by a "Rentier State"
+	- Game rules localisation fixes
 
 Content:
 	- USA, SOV, CHI, ENG, FRA, RAJ, JAP, ITA, SPR, PER, KOR, TAI, ISR, NKO, TUR, GER, UKR, BRA, PAK, EGY missile technology setup
